tests/field/assign_to_type.rev
struct Foo {
    a: int
    b: str
    c: float

    bar: fn(int, int)
}

var f = Foo()
f.a = true // error: trying to assign value of type 'bool' to variable of type 'int'
f.b = 1 // error: trying to assign value of type 'int' to variable of type 'str'
f.c = 1 // implicit cast ok